--- a/frontEnd/src/components/auth/ForgotPasswordForm.module.scss
+++ b/frontEnd/src/components/auth/ForgotPasswordForm.module.scss
@@ -1,15 +1,11 @@
-.register,
-.login {
-	flex: 1;
-}
 
 .title {
 	font-size: 3rem;
 }
-.authForm {
+.ForgotPasswordForm {
 	margin-top: 2rem;
 	width: 100%;
-	label {
+	p {
 		width: 100%;
 		font-size: 2rem;
 	}
@@ -24,9 +20,20 @@
 		background-color: rgb(206, 206, 206);
 	}
 	button[type='submit'] {
-		font-size: 2rem;
-		padding: 0.5rem 1rem;
+		border: none;
+		color: white;
+		padding: 15px 32px;
+		text-align: center;
+		text-decoration: none;
+		display: inline-block;
+		font-size: 20px;
+		margin: 4px 2px;
+		transition-duration: 0.4s;
 		cursor: pointer;
+	  
+		&:hover {
+		  background-color: #3e8e41; // Dark green
+		}
 	}
 }
 .Fp{
